# signature-collector

./: .gitignore  README.md  pyproject.toml  run.command  signature-packet-gui.command
scripts/: install_deps.sh  resolve_venv.sh
signature_packet/: __init__.py  cli.py  convert_docx.py  detect.py  engine.py  gui.py  merge.py  ocr.py
tests/: test_detect.py
